force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__Description__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Description__c</fullName>
    <description>A description of the onboarding task.</description>
    <inlineHelpText>A custom task description that employees see in the onboarding checklist. If left blank, the text in the Task Description field is shown.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>