force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__DisplayDescription__c.field-meta.xml
<CustomField>
    <fullName>wkdw__DisplayDescription__c</fullName>
    <description>A description of the onboarding task.</description>
    <inlineHelpText>The task description that employees see in the onboarding checklist. If left blank, the Description is used.</inlineHelpText>
    <label>Display Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>