force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__Priority__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Priority__c</fullName>
    <description>Prioritizes the order of the onboarding task for the specified due date.</description>
    <label>Priority of Onboarding Task</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>